--- a/0621.ipynb
+++ b/0621.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0621.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPMy9wD46TZyRnH4I9cpCPe",
+      "authorship_tag": "ABX9TyNSo1u0UqtKgfjcOL+l66fW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,7 @@
         "a=int(input('請輸入一個正整數'))\n",
         "sum=0\n",
         "for i in range(1,a+1):\n",
-        "  sum=sum+i\n",
+        "  sum+=i\n",
         "  print('1到',i,'的整數和為',sum)"
       ],
       "metadata": {
@@ -96,9 +96,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UBs96XZCGcos",
-        "outputId": "42845bad-ba56-4bfb-c23f-6df20ccebe04"
+        "outputId": "99cabc59-e15f-4ca7-f5e0-af6bfc9c3e37"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
