--- a/期末實作_統計一A_朱靖榆_410650013.ipynb
+++ b/期末實作_統計一A_朱靖榆_410650013.ipynb
@@ -180,7 +180,8 @@
     {
       "cell_type": "code",
       "source": [
-        "money=(print('請輸入購物金額:')\n",
+        "money=int(input('請輸入購物金額:'))\n",
+        "print('你購買的總金額為:',money,'元')\n",
         "if money>=1000:\n",
         "  if money>=10000:\n",
         "    print('您享有八折的折扣!折扣後的價格為:','%0.1f'%(money*0.8),'元')\n",
@@ -196,19 +197,19 @@
       "metadata": {
         "id": "F5zjKbfGFKIq",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 132
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "31998d51-bd74-48a2-a0a6-bad98a589fc7"
+        "outputId": "a9a5e094-fa90-4e55-fba2-1e7fd2f61389"
       },
-      "execution_count": 60,
+      "execution_count": 67,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-18f69aa1e64e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if money>=1000:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入購物金額:12000\n",
+            "你購買的總金額為: 12000 元\n",
+            "您享有八折的折扣!折扣後的價格為: 9600.0 元\n"
           ]
         }
       ]
@@ -278,95 +279,30 @@
         "for i in range(2,10):\n",
         "  for j in range(1,10):\n",
         "    product=i*j\n",
-        "    print('%d*%d=%2d'%(i,j,product))\n",
-        "print()"
+        "    print('%d*%d=%2d'%(i,j,product),end=' ')\n",
+        "  print()"
       ],
       "metadata": {
         "id": "Q81c3yWcJudc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "01ddb6cc-994f-41f0-a2c8-3d31f2ff181f"
+        "outputId": "2bdb23d7-63f7-4a90-d30b-6fe8279a9a6c"
       },
-      "execution_count": 57,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2*1= 2\n",
-            "2*2= 4\n",
-            "2*3= 6\n",
-            "2*4= 8\n",
-            "2*5=10\n",
-            "2*6=12\n",
-            "2*7=14\n",
-            "2*8=16\n",
-            "2*9=18\n",
-            "3*1= 3\n",
-            "3*2= 6\n",
-            "3*3= 9\n",
-            "3*4=12\n",
-            "3*5=15\n",
-            "3*6=18\n",
-            "3*7=21\n",
-            "3*8=24\n",
-            "3*9=27\n",
-            "4*1= 4\n",
-            "4*2= 8\n",
-            "4*3=12\n",
-            "4*4=16\n",
-            "4*5=20\n",
-            "4*6=24\n",
-            "4*7=28\n",
-            "4*8=32\n",
-            "4*9=36\n",
-            "5*1= 5\n",
-            "5*2=10\n",
-            "5*3=15\n",
-            "5*4=20\n",
-            "5*5=25\n",
-            "5*6=30\n",
-            "5*7=35\n",
-            "5*8=40\n",
-            "5*9=45\n",
-            "6*1= 6\n",
-            "6*2=12\n",
-            "6*3=18\n",
-            "6*4=24\n",
-            "6*5=30\n",
-            "6*6=36\n",
-            "6*7=42\n",
-            "6*8=48\n",
-            "6*9=54\n",
-            "7*1= 7\n",
-            "7*2=14\n",
-            "7*3=21\n",
-            "7*4=28\n",
-            "7*5=35\n",
-            "7*6=42\n",
-            "7*7=49\n",
-            "7*8=56\n",
-            "7*9=63\n",
-            "8*1= 8\n",
-            "8*2=16\n",
-            "8*3=24\n",
-            "8*4=32\n",
-            "8*5=40\n",
-            "8*6=48\n",
-            "8*7=56\n",
-            "8*8=64\n",
-            "8*9=72\n",
-            "9*1= 9\n",
-            "9*2=18\n",
-            "9*3=27\n",
-            "9*4=36\n",
-            "9*5=45\n",
-            "9*6=54\n",
-            "9*7=63\n",
-            "9*8=72\n",
-            "9*9=81\n",
-            "\n"
+            "2*1= 2 2*2= 4 2*3= 6 2*4= 8 2*5=10 2*6=12 2*7=14 2*8=16 2*9=18 \n",
+            "3*1= 3 3*2= 6 3*3= 9 3*4=12 3*5=15 3*6=18 3*7=21 3*8=24 3*9=27 \n",
+            "4*1= 4 4*2= 8 4*3=12 4*4=16 4*5=20 4*6=24 4*7=28 4*8=32 4*9=36 \n",
+            "5*1= 5 5*2=10 5*3=15 5*4=20 5*5=25 5*6=30 5*7=35 5*8=40 5*9=45 \n",
+            "6*1= 6 6*2=12 6*3=18 6*4=24 6*5=30 6*6=36 6*7=42 6*8=48 6*9=54 \n",
+            "7*1= 7 7*2=14 7*3=21 7*4=28 7*5=35 7*6=42 7*7=49 7*8=56 7*9=63 \n",
+            "8*1= 8 8*2=16 8*3=24 8*4=32 8*5=40 8*6=48 8*7=56 8*8=64 8*9=72 \n",
+            "9*1= 9 9*2=18 9*3=27 9*4=36 9*5=45 9*6=54 9*7=63 9*8=72 9*9=81 \n"
           ]
         }
       ]
