使用 Colaboratory 建立

--- a/期末實作_統計一A_朱靖榆_410650013.ipynb
+++ b/期末實作_統計一A_朱靖榆_410650013.ipynb
@@ -60,26 +60,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 70,
       "metadata": {
         "id": "Epjrt_88DkpR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41b6dccb-ad85-4c21-9726-4da6380ffc93"
+        "outputId": "f84f1997-2694-415a-f392-4a4fed354b68"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['統計一A', '410650013', '朱靖榆']\n"
+            "統計一A,410650013,朱靖榆\n"
           ]
         }
       ],
       "source": [
-        "a=['統計一A','410650013','朱靖榆']\n",
-        "print(a)"
+        "list=['統計一A',410650013,'朱靖榆']\n",
+        "print(list[0],list[1],list[2],sep=',')"
       ]
     },
     {
@@ -97,25 +97,27 @@
     {
       "cell_type": "code",
       "source": [
-        "[a]=['統計一A']\n",
-        "[num]=['410650013']\n",
-        "[name]=['朱靖榆']\n",
-        "print('班級:',[a],'學號:',[num],'姓名:',[name],end='\\n')"
+        "list=['統計一A',410650013,'朱靖榆']\n",
+        "print('班級:',list[0])\n",
+        "print('學號:',list[1])\n",
+        "print('姓名:',list[2])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tq5P9KIdx-05",
-        "outputId": "12e3d28f-448e-4207-8aac-28af939b161d"
+        "outputId": "767bbc5d-750c-4de3-978d-09a3a9d8af21"
       },
-      "execution_count": 59,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "班級: ['統計一A'] 學號: ['410650013'] 姓名: ['朱靖榆']\n"
+            "班級: 統計一A\n",
+            "學號: 410650013\n",
+            "姓名: 朱靖榆\n"
           ]
         }
       ]
@@ -320,6 +322,7 @@
     {
       "cell_type": "code",
       "source": [
+        "a=\n",
         "sum=0\n",
         "for i in range(1,101):\n",
         "  if(i%9==0) or (i%13==0):\n",
