使用 Colaboratory 建立

--- a/期末實作_統計一A_朱靖榆_410650013.ipynb
+++ b/期末實作_統計一A_朱靖榆_410650013.ipynb
@@ -364,25 +364,25 @@
         "num=[1,2,3]\n",
         "name=['Tom','Mary','Tony']\n",
         "score=[85,79,93]\n",
-        "for i in range(len(score)):\n",
-        "  print('編號:'[num] '姓名:''%s' '成績:[score]'%(name))"
+        "for i in range(len(num)):\n",
+        "  print('編號:%d 姓名:%s 成績:%d'%(num[i],name[i],score[i]))"
       ],
       "metadata": {
         "id": "pPkO4uz0Jz44",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 132
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "95b99da5-df43-4c71-b7df-f5988868628f"
+        "outputId": "aa728f3d-8d61-4360-a1e3-e3cb5c664c05"
       },
-      "execution_count": 54,
+      "execution_count": 73,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-54-959d9fbdfa12>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print('編號:'[num] '姓名:''%s' '成績:[score]'%(name))\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "編號:1 姓名:Tom 成績:85\n",
+            "編號:2 姓名:Mary 成績:79\n",
+            "編號:3 姓名:Tony 成績:93\n"
           ]
         }
       ]
