使用 Colaboratory 建立

--- a/期末實作_統計一A_朱靖榆_410650013.ipynb
+++ b/期末實作_統計一A_朱靖榆_410650013.ipynb
@@ -142,16 +142,16 @@
         "a=int(input('請輸入月份:'))\n",
         "b=int(input('請輸入日期:'))\n",
         "c=input('請輸入今天是星期幾:')\n",
-        "print('今天是:',a,'月'',',b,'號',',','星期',c,end='')"
+        "print('今天是:',a,'月'',',b,'號',',','星期',c,sep='')"
       ],
       "metadata": {
         "id": "5hd0XifGJlnF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b6ddc5a-f4bf-4708-a2e6-554fff9d937c"
+        "outputId": "193c4b7d-809e-41ae-9603-af6f1eb279c8"
       },
-      "execution_count": 18,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
             "請輸入月份:1\n",
             "請輸入日期:1\n",
             "請輸入今天是星期幾:二\n",
-            "今天是: 1 月, 1 號 , 星期 二"
+            "今天是:1月,1號,星期二\n"
           ]
         }
       ]
@@ -322,27 +322,31 @@
     {
       "cell_type": "code",
       "source": [
-        "a=\n",
         "sum=0\n",
         "for i in range(1,101):\n",
         "  if(i%9==0) or (i%13==0):\n",
+        "    print(i,end=' ')\n",
+        "for i in range(1,101):\n",
+        "  if(i%9==0) or (i%13==0):\n",
         "    sum+=i\n",
-        "print('9或是13倍數的數之總和',sum)"
+        "print()\n",
+        "print(sum)"
       ],
       "metadata": {
         "id": "oCQSFuq-JxEq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cac26652-6286-4a4f-d8ac-1a889cd94309"
+        "outputId": "1710b5d8-a097-4e87-d18e-17e8b0e95cbe"
       },
-      "execution_count": 50,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "9或是13倍數的數之總和 958\n"
+            "9 13 18 26 27 36 39 45 52 54 63 65 72 78 81 90 91 99 \n",
+            "958\n"
           ]
         }
       ]
